Implemented JWT auth, role-based security, ambulance and emergency flow improvements